--- a/src/compnents/UI/Button.module.css
+++ b/src/compnents/UI/Button.module.css
@@ -1,6 +1,6 @@
 .button {
     font: inherit;
-    border: 1px solid #fdfdfd;
+    border: 1px solid #240b94;
     background: #3f3380;
     color: white;
     padding: 0.25rem 1rem;
