--- a/src/compnents/UI/Card.module.css
+++ b/src/compnents/UI/Card.module.css
@@ -2,4 +2,5 @@
     background: rgb(54, 52, 52);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 10px;
+    color: aliceblue;
 }
