Added new feature no data text and red while not entering text

--- a/src/compnents/User/AddTodo.module.css
+++ b/src/compnents/User/AddTodo.module.css
@@ -24,3 +24,10 @@
     outline: none;
     border-color: #4f005f;
   }
+  .invalid label{
+    color: red;
+  }
+  .invalid input{
+    border-color: red;
+    background-color: rgb(218, 174, 174);
+  }
